# django-pay

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  dashboard_prometheus.json  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
alertmanager/: alertmanager.yml
djangopayment/: asgi.py  settings.py  urls.py  wsgi.py
food/: admin.py  enum.py  flutterwave.py  models.py  moneroo.py  paypal.py  stripe.py  urls.py  views.py
food/migrations/: 0001_initial.py
prometheus/: alert_rules.yml  prometheus.yml
scripts/: deploy.sh  entrypoint.sh
static/css/: style.css
static/js/: cart.js  scripts.js
templates/: index.html
templates/public/: base.html  cart.html  checkout.html  index.html  payment_cancel.html  payment_success.html  product_detail.html
templates/public/includes/: _footer.html  _header.html  _meta.html
