[project]
name = "djangopayment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "flask>=3.1.3",
    "payunit>=0.2.4",
    "pillow>=12.1.1",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
]


[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
